Bug 988511 - Allow fixed position items to fully occlude displayport items. r=tn

We don't allow fixed position items to occlude display-ports, but we should if
they fully occlude the scroll-position scroll clamping port of the displayport
frame.